--- a/scripts/pyproject.toml
+++ b/scripts/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "psh_probability"
+name = "scripts"
 version = "0.1.0"
 description = ""
 authors = ["Mikolaj Najda <mikolaj.najda@maastrichtuniversity.nl>"]
@@ -10,12 +10,12 @@ package-mode = false
 python = ">=3.9,<3.11"
 scikit-learn = "^1.4.2"
 pandas = "^2.2.2"
+seaborn = "^0.13.2"
 statsmodels = "^0.14.2"
-xgboost = "^2.0.3"
-shap = "^0.45.0"
 fastparquet = "^2024.2.0"
 pyyaml = "^6.0.1"
-utilities = { path = "../utilities/" }
+pipreqs = "^0.5.0"
+shap = "^0.46.0"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.4"
